--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,5 +1,6 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  /* background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%); */
+  background: #010508;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -59,7 +60,7 @@
 }
 
 .nav-links:hover {
-  border-bottom: 4px solid #fff;
+  border-bottom: 4px solid red;
   transition: all 0.2s ease-out;
 }
 
@@ -145,7 +146,7 @@
     font-size: 1.5rem;
     background-color: transparent;
     color: #fff;
-    padding: 5px 10px;
+    padding: 10px 10px;
     border: 1px solid #fff;
     transition: all 0.5s ease-out;
   }
