--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -25,14 +25,9 @@
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   display: flex;
   align-items: center;
-}
-
-.fa-typo3 {
-  margin-left: 0.5rem;
-  font-size: 1.8rem;
 }
 
 .nav-menu {
@@ -64,7 +59,7 @@
   transition: all 0.2s ease-out;
 }
 
-.fa-bars {
+.fa-heart {
   color: #fff;
 }
 
