--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -66,7 +66,7 @@ h1 {
   font-size: 12px;
   font-weight: 700;
   color: #fff;
-  background-color: red;
+  background-color: purple;
   box-sizing: border-box;
 }
 
