--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,13 +1,13 @@
-video {
+/* video {
   object-fit: cover;
   width: 100%;
   height: 100%;
   position: fixed;
   z-index: -1;
-}
+} */
 
 .hero-container {
-  background: url(https://res.cloudinary.com/duol0lmxj/image/upload/v1649202644/Wedding_photo_sample_qov1md.jpg)
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://res.cloudinary.com/duol0lmxj/image/upload/v1649356840/20220208-DSC_7277_ne8exi.jpg)
   center center/cover no-repeat;
   height: 100vh;
   width: 100%;
