--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,9 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 10px;
+  font-size: 25px;
+  justify-content: center;
+  text-align: center;
 }
 
 .about {
@@ -32,7 +34,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 10px;
+  font-size: 25px;
 }
 
 .sign-up {
@@ -41,5 +43,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 10px;
+  font-size: 20px;
+  justify-content: center;
+  text-align: center;
 }
