--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,9 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 25px;
+  font-size: 20px;
+  justify-content: center;
+  text-align: center;
 }
 
 .sign-up {
