--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -21,7 +21,15 @@
 .hero-container > p {
   margin-top: 8px;
   color: #fff;
-  font-size: 32px;
+  font-size: 50px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+
+.hero-container > h2{
+  margin-top: 8px;
+  color: #fff;
+  font-size: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
