--- a/src/components/pages/PagesButton.css
+++ b/src/components/pages/PagesButton.css
@@ -11,3 +11,13 @@
   border-radius: 2px;
   border: none;
 }
+
+.styled--p--about{
+  text-indent: 20px;
+  text-decoration: none;
+  display: inline-block;
+  word-break: keep-all;
+  width: 400px;
+  text-align: left;
+  margin-top: 10px;
+}
