--- a/src/components/pages/PagesButton.css
+++ b/src/components/pages/PagesButton.css
@@ -13,13 +13,14 @@
 }
 
 .styled--p--about{
-  text-indent: 20px;
+  text-indent: 10px;
   text-decoration: none;
-  display: inline-block;
+  font-size: 15px;
   word-break: keep-all;
-  width: 400px;
+  width: 350px;
   text-align: left;
   margin-top: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+  display: inline-block;
 }
