--- a/src/components/pages/PagesStyles.css
+++ b/src/components/pages/PagesStyles.css
@@ -12,6 +12,23 @@
   border: none;
 }
 
+.styled-btn--outline {
+  background-color: transparent;
+  color: #fff;
+  padding: 8px 20px;
+  border: 1px solid;
+  transition: all 0.5s ease-out;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.styled-btn--outline:hover{
+  background: #fff;
+  color: #242424;
+  transition: all 0.5s ease-out;
+}
+
 .styled--p--about{
   text-indent: 10px;
   text-decoration: none;
